use_undefined_identifier/c0/f_in_check
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/f_in_check/src/moves.c:1335:6: error: use of undeclared identifier 'f_in_check_knight_o'
if ( f_in_check_knight_o[lh] + wking_loc == target ) 
     ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/f_in_check/src/moves.c:1595:6: error: use of undeclared identifier 'f_in_check_knight_o'
if ( f_in_check_knight_o[lbg] + bking_loc == target ) 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/f_in_check/src/obj/moves.o] Error 1
